// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CONTRACT: customer connect direct OAuth flags (BSP-6-CUSTOMER) > [snapshot] FACEBOOK — disableAutoLogin:true + withBusinessScope:true 1`] = `
{
  "requestBody": {
    "disableAutoLogin": true,
    "redirectUrl": "https://opollo-site-builder.vercel.app/api/platform/social/connections/callback?company_id=abcdef00-0000-0000-0000-aaaaaaaa1616&popup=1",
    "teamId": "team-customer-contract",
    "type": "FACEBOOK",
    "withBusinessScope": true,
  },
}
`;

exports[`CONTRACT: customer connect direct OAuth flags (BSP-6-CUSTOMER) > [snapshot] GOOGLE_BUSINESS — disableAutoLogin:true, no withBusinessScope 1`] = `
{
  "requestBody": {
    "disableAutoLogin": true,
    "redirectUrl": "https://opollo-site-builder.vercel.app/api/platform/social/connections/callback?company_id=abcdef00-0000-0000-0000-aaaaaaaa1616&popup=1",
    "teamId": "team-customer-contract",
    "type": "GOOGLE_BUSINESS",
  },
}
`;

exports[`CONTRACT: customer connect direct OAuth flags (BSP-6-CUSTOMER) > [snapshot] INSTAGRAM — disableAutoLogin:true + withBusinessScope:true 1`] = `
{
  "requestBody": {
    "disableAutoLogin": true,
    "redirectUrl": "https://opollo-site-builder.vercel.app/api/platform/social/connections/callback?company_id=abcdef00-0000-0000-0000-aaaaaaaa1616&popup=1",
    "teamId": "team-customer-contract",
    "type": "INSTAGRAM",
    "withBusinessScope": true,
  },
}
`;

exports[`CONTRACT: customer connect direct OAuth flags (BSP-6-CUSTOMER) > [snapshot] LINKEDIN — disableAutoLogin:true, no withBusinessScope 1`] = `
{
  "requestBody": {
    "disableAutoLogin": true,
    "redirectUrl": "https://opollo-site-builder.vercel.app/api/platform/social/connections/callback?company_id=abcdef00-0000-0000-0000-aaaaaaaa1616&popup=1",
    "teamId": "team-customer-contract",
    "type": "LINKEDIN",
  },
}
`;
